# flashcards

./: .env  .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  jest.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: app-action.yaml  release-action.yaml
migrations/: 20230929124435_init.down.sql  20230929124435_init.up.sql
migrations/2023-08-26-103812_init/: down.sql  up.sql
src/: app.html  db.rs  flashcard.rs  katex.css  main.rs  markdown.rs  models.rs  schema.rs  serialize.rs  session.rs  spa.rs  styles.css  sync.rs  tui.rs
src-tauri/: .taurignore  Cargo.toml  flashcards.db  tauri.conf.json
src-tauri/migrations/: 20231002190802_init.down.sql  20231002190802_init.up.sql  20231008151933_filepath.down.sql  20231008151933_filepath.up.sql
src-tauri/src/: db.rs  main.rs  sync.rs
src-tauri/src/models/: answer.rs  flashcard.rs  mod.rs
src-tauri/src/parsers/: markdown.rs  parser.rs
src-tauri/src/repetition_algs/: mod.rs  naive_exponential.rs
src/api/: commands.ts  markdown.test.ts  markdown.ts  mathjax.ts  preferences.ts  toasts.ts
src/api/types/: algorithm.ts  card.ts  config.ts
src/html/: index.html  preview-one.html  preview.html  review.html  settings.html
src/lib/: Index.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/preview/: +page.svelte
src/routes/preview/[id]/: +page.svelte
src/routes/review/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: pendingSync.ts
src/ts/: commands.ts  index.ts  mathjax.ts  preview-one.ts  preview.ts  review.ts  settings.ts
