[package]
name = "flashcards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
ratatui = { version = "0.23.0", features = ["all-widgets"]}
clap = { version = "4.4.2", features = ["derive"] }
walkdir = "2.3.3"
log = "0.4.20"
env_logger = "0.10.0"
